--- a/TPDataBizHackathon.Web/TPDataBizHackathon.Web.csproj
+++ b/TPDataBizHackathon.Web/TPDataBizHackathon.Web.csproj
@@ -46,6 +46,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SimpleInjector, Version=4.5.1.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.4.5.1\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -120,13 +123,17 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AnaliseController.cs" />
     <Compile Include="Controllers\ClimaTempoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PerfisController.cs" />
     <Compile Include="Controllers\TabuaMareController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Analise.cs" />
     <Compile Include="Models\ClimaTempo.cs" />
+    <Compile Include="Models\Enums\Enum_Cargos.cs" />
     <Compile Include="Models\TabuaMare.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\ClimaTempoAPI.cs" />
@@ -136,6 +143,7 @@
     <Compile Include="Utils\TabuaMareXMLReader.cs" />
     <Compile Include="Utils\Utils.cs" />
     <Compile Include="value\Substring.cs" />
+    <Compile Include="ViewModel\FuncionarioViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -222,6 +230,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\ClimaTempo\semana.cshtml" />
     <Content Include="Views\TabuaMare\tabua.cshtml" />
+    <Content Include="Views\Perfis\Perfis.cshtml" />
+    <Content Include="Views\Analise\Analise.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -238,6 +248,16 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TPDataBizHackathon.Application\TPDataBizHackathon.Application.csproj">
+      <Project>{3b85106e-35cd-4eb9-8db4-26c5ec062b15}</Project>
+      <Name>TPDataBizHackathon.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TPDataBizHackathon.Infra.IoC\TPDataBizHackathon.Infra.IoC.csproj">
+      <Project>{543117ac-7364-45b0-8990-0f1024e19b1f}</Project>
+      <Name>TPDataBizHackathon.Infra.IoC</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
