--- a/teste/App.config
+++ b/teste/App.config
@@ -20,5 +20,7 @@
 
   <connectionStrings>
     <add name="ContextModel" connectionString="data source=tcp:mlssql.database.windows.net,1433;initial catalog=tpdatabiz;user id=tpdatabiz_usr;Password=St$6WuyU;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
+    <add name="ExcelConnection" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\Gabriel\Documents\Nomes.xls;Extended Properties='Excel 8.0; HDR=YES;'"/>
   </connectionStrings>
 </configuration>
