--- a/TPDataBizHackathon.Web/TPDataBizHackathon.Web.csproj
+++ b/TPDataBizHackathon.Web/TPDataBizHackathon.Web.csproj
@@ -202,6 +202,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="images\ClimaTempo\icons\icon-7.ai" />
+    <None Include="Properties\PublishProfiles\tpdatabiz - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
